--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
 Flask==3.0.3
 flask-cors==4.0.0
 
-torch==2.5.0
-transformers==4.38.2
-tokenizers==0.15.2
-safetensors==0.4.2
+pymongo==4.6.1
+python-dotenv==1.0.1
 
+requests==2.32.3
 google-search-results==2.4.2
 groq==0.26.0
-requests==2.32.3
